[package]
name = "saymyname"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["full"] }
futures = "0.3.17"
dns-parser = "0.8.0"
tower-service = "0.3.1"
